Ingress-v1.10.1/Sample-new-nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: new-nginx
spec:
  ingressClassName: nginx
  rules:
  - host: asun.io
    http:
      paths:
      - backend:
          service:
            name: new-nginx
            port:
              number: 80
        path: /
        pathType: Prefix
